Fix assertion in ItemServiceImplTest to use getFirst() for clarity